# paper-graph-rs

./: Cargo.toml  README.md
crates/paper-graph/: Cargo.toml
crates/paper-graph-cli/: Cargo.toml
crates/paper-graph-cli/src/: main.rs
crates/paper-graph/src/: lib.rs  printer.rs  text.rs
